funcmap/tests/ui/input/no_type_params.stderr
error: expected at least one type parameter, found none
 --> tests/ui/input/no_type_params.rs:4:12
  |
4 | struct Test<'a, const N: usize>(&'a ());
  |            ^^^^^^^^^^^^^^^^^^^^
